--- a/views/add_recipes.ejs
+++ b/views/add_recipes.ejs
@@ -10,15 +10,7 @@
 </head>
 
 <body>
-  <!-- <script src="index.js"></script> -->
-  <!-- Navbar -->
-  <ul class="navbar">
-    <li><a href="recipes.html">Recipes</a></li>
-    <li><a href="add_recipes.html">Add Recipes</a></li>
-    <li><a href="chefs.html">Chefs</a></li>
-    <li><a href="add_chefs.html">Add Chefs</a></li>
-  </ul>
-  <!-- /Navbar -->
+  <%- include('navbar') %>
 
   <div class="content-container">
     <h1>Recipe Form</h1>
