--- a/views/update_recipe.ejs
+++ b/views/update_recipe.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Add Recipes</title>
+  <title>Update Recipes</title>
   <link rel="stylesheet" type="text/css" href="/styles/style.css">
 </head>
 
@@ -14,32 +14,32 @@
 
   <div class="content-container">
     <h1>Recipe Form</h1>
-    <form id="api/recipes" action="/api/recipes" method="POST" enctype="multipart/form-data" target="_self">
+    <form id="api/recipes/<%= recipe._id %>" action="/api/recipes/<%= recipe._id %>" method="POST" enctype="multipart/form-data" target="_self">
       <div class="form-group">
         <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required>
+        <input type="text" id="title" name="title" value="<%= recipe.title %>">
       </div>
       <div class="form-group">
         <label for="description">Description:</label>
-        <textarea id="description" name="description" rows="4" required></textarea>
+        <textarea id="description" name="description" rows="4"><%= recipe.description %></textarea>
       </div>
       <div class="form-group">
         <label for="ingredients">Ingredients:</label>
-        <textarea id="ingredients" name="ingredients" rows="4" required></textarea>
+        <textarea id="ingredients" name="ingredients" rows="4"><%= recipe.ingredients %></textarea>
       </div>
       <div class="form-group">
         <label for="instructions">Instructions:</label>
-        <textarea id="instructions" name="instructions" rows="4" required></textarea>
+        <textarea id="instructions" name="instructions" rows="4"><%= recipe.instructions %></textarea>
       </div>
       <div class="form-group">
         <label for="chef">Chef:</label>
-        <input type="text" id="chef" name="chef" required>
+        <input type="text" id="chef" name="chef" value="<%= recipe.chef %>">
       </div>
       <div class="form-group">
         <label for="foodImage">Picture of the Food:</label>
-        <input type="file" id="foodImage" name="foodImage" required>
+        <input type="file" id="foodImage" name="foodImage">
       </div>
-      <button type="submit" onclick="window.location.href='/api/add_recipes'">Submit</button>
+      <button type="submit">Submit</button>
     </form>
   </div>
 </body>
